# PCResolve

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
docs/: architecture.md  output-contract.md  pcart-integration.md  real-project-validation.md  source-semantics.md  trace-contract.md
reports/: tested-projects-audit.json  tested-projects-audit.md
scripts/: audit_tested_projects.py  diff_v1_v2.py  perf_baseline.py
src/cross_file_analyzer/: cross_file_analyzer.py
src/path_scanner/: getPath.py  module_mapper.py
src/pcresolve/: __init__.py  call_graph.py  classification.py  cli.py  cross_file.py  decorator_provenance.py  diagnostics.py  ir.py  library_usage.py  module_mapper.py  scanner.py  scope.py  single_file.py  sources.py  (+4 more)
tests/: test_MAHE_OD_DATASET.py  test_Python_Workshop.py  test_SDOML.py  test_TSP.py  test_Youtube.py  test_aibo.py  test_aiofiles1.py  test_aiomqtt1.py  test_allnews.py  test_api_call_fields.py  test_api_classification.py  test_ast.py  test_ast_compat.py  test_call_result_reassign.py  test_classification_boundary.py  test_click1.py  test_click2.py  test_click3.py  test_contrucao.py  test_covid19.py  test_customsamplers.py  test_deep_graph_kernels.py  test_diagnostics.py  test_diff_taxonomy.py  test_django.py  test_ejplab.py  test_final.py  test_flask1.py  test_flask2.py  test_fuel_forecast_explorer.py  test_galax.py  test_gender.py  test_giantpopflucts.py  test_gistable.py  test_golden_output.py  test_greenbenchmark.py  test_hfhd.py  test_integration.py  test_machine_learning.py  test_module_mapper.py  (+26 more)
(+124 files in other folders)
