[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pcresolve"
version = "1.0.0"
description = "Static analysis tool for tracing Python API calls to their origin library"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[project.scripts]
pcresolve = "pcresolve.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pcresolve"]
