[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pcresolve"
version = "1.0.1"
description = "Static analysis tool for tracing Python API calls to their origin library"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/PCART-tools/PCResolve"
Repository = "https://github.com/PCART-tools/PCResolve"
Issues = "https://github.com/PCART-tools/PCResolve/issues"

[project.scripts]
pcresolve = "pcresolve.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pcresolve"]

[tool.pytest.ini_options]
norecursedirs = ["tests/fixtures/tested_projects"]
